test/langtools/tools/javac/enhanced_enums/NoWildcardInEnumConstantsTest.out
NoWildcardInEnumConstantsTest.java:9:5: compiler.err.type.found.req: ?, (compiler.misc.type.req.exact)
1 error
